objects/vlocity_ins__ContextAction__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CustomImplementation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Implementation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFrom__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntil__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price List</label>
        <referenceTo>vlocity_ins__PriceList__c</referenceTo>
        <relationshipName>ContextActions_PriceList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PricingElementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Element</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>vlocity_ins__PricingElement__c.vlocity_ins__PriceListId__c</field>
                <operation>equals</operation>
                <valueField>$Source.vlocity_ins__PriceListId__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>vlocity_ins__PricingElement__c</referenceTo>
        <relationshipName>ContextActions_PricingElement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat Fee</fullName>
                </value>
                <value>
                    <fullName>Custom Calculation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Context Action</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Context Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Context Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>